# install-sfml

./: .eslintrc.json  .gitignore  README.md  action.yml  index.js  package-lock.json  package.json
.github/workflows/: main.yml  release.yml
.tools/: upgrade.sh
sfml-3-project/: CMakeLists.txt  main.cpp
sfml-project/: CMakeLists.txt  main.cpp
